onboarding flow cleanup after merge, fixed spacing issues

--- a/src/chrome-extension/popup/index.css
+++ b/src/chrome-extension/popup/index.css
@@ -102,7 +102,7 @@ body {
     display: flex;
     justify-content: center; 
     align-items: center;
-    height: 100%;
+    height: 80%;
     flex-direction: column;
 }
 
@@ -191,8 +191,8 @@ body {
 #health-info-container{
     display: grid;
     grid-template-columns: 50% 50%; /* Two equal columns */ 
-    padding: 1.5em;
-    height: 80%;
+    padding: 0 1.5em 1.5em 1.5em;
+    height: 70%;
 }
 
 #health-info-container p {
